--- a/src/pages/error.html
+++ b/src/pages/error.html
@@ -12,10 +12,28 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-
+    <script src="https://kit.fontawesome.com/fb2208b0dd.js" crossorigin="anonymous"></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="../styles/reset.css">
+    <link rel="stylesheet" href="../styles/globalStyles.css">
+    <link rel="stylesheet" href="../styles/erro.css">
     <title>Git Search - User Not Found</title>
   </head>
   <body>
+    <main>
+      <div class="text-erro__container">
+        <h1>Ooops!</h1>
+        <p>Não encotramos o usuário que você procurou, vamos tentar novamente.</p>
+        <button class="button__error">Nova Busca</button>
+      </div>
+      <div class="img-erro__continer">
+        <div class="front__pink">
+          <i class="fa-solid fa-triangle-exclamation"></i>
+        </div>
+        <div class="back__purple">
+        </div>
+      </div>
+    </main>
 
     <script type="module" src="../scripts/error.js"></script>
   </body>
