--- a/index.html
+++ b/index.html
@@ -12,11 +12,30 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <!-- CSS -->
+    <link rel="stylesheet" href="./src/styles/reset.css">
+    <link rel="stylesheet" href="./src/styles/globalStyles.css">
+    <link rel="stylesheet" href="./src/styles/index.css">
 
     <title>Git Search</title>
   </head>
   <body>
-
+    <main>
+      <div  class="rose__container">
+        <div class="rose-texts__container">
+          <h1>Git Search</h1>
+          <p>Encontre e se conecte com profissionais de forma rápida e fácil</p>
+        </div>
+      </div>
+      <div  class="black__container">
+        <div class="black-texts__container">
+          <h2>Procurar por um usuário</h2>
+          <label for="input-name">Usuário github</label>
+          <input type="text" id="input-name" placeholder="Digite um usuário do github aqui...">
+          <button class="button__submit">Ver perfil do github</button>
+        </div>
+      </div>
+    </main>
     <script type="module" src="./src/scripts/index.js"></script>
   </body>
 </html>
