--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -21,12 +21,12 @@
 
 <body>
   <div class="user__container">
-    <div class="user-name__container">
+    <header class="user-name__container">
       <figure>
         <img class='avatar-img' src="" alt="">
       </figure>
       <h1>Maycon</h1>
-    </div>
+    </header>
     <button class="change-user__button">Trocar de usuário</button>
   </div>
   <ul class="repositories__container">
